# GateForge

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/GateForge/: __main__.py  compiler.py  concepts.py  core.py  dsl.py  verilator.py
src/gateforge/: __main__.py  compiler.py  concepts.py  core.py  dsl.py  verilator.py  verilator_cpp.py
test/: sample_module.py  test_concepts.py  test_expressions.py  test_modules.py  test_statements.py  test_verilator.py  utils.py
