[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.vscode"
]

[project]
name = "gateforge"
version = "0.0.4"
authors = [
  { name="Artyom Lebedev", email="artyom.lebedev@gmail.com" },
]
description = "Framework for designing Register-Transfer Level (RTL) hardware"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/vagran/GateForge"
Issues = "https://github.com/vagran/GateForge/issues"
